# tensorPattern

./: .gitignore  CMakeLists.txt  NOTICE  README.txt  Versions.txt
gui/: tensor_gui.glade  tensor_gui.xml
media/: 0.now  1.now  2.now  3.now  4.now  5.now  6.now  7.now  8.now  9.now  new.now  tensorIP.map.default  tensorPixel.map.default
preload/: 1.now  3.now  5.now
scripts/: tensor.sh
src/: .notes.txt.swp  CMakeLists.txt  Makefile.old  badOldDefines.h  blue-wave-left_a2.c  blue-wave-up_a.c  color-cycle-ugly_colors.c  colors.c  colors.h  draw.c  draw.h  drawSupport.c  drawSupport.h  drv-tensor.c  drv-tensor.h  elements.c  elements.h  green-wave-up_adf.c  gui.c  gui.h  guidraw.c  guidraw.h  guiprimitives.c  guiprimitives.h  kinet.h  layout.c  layout.h  log.c  log.h  machine.c  machine.h  machine.h.gch  magenta-green-ortho-scaler_pl.c  modal.c  modal.h  my_font.h  normal.h  notes.txt  pattern.c  pattern.h  (+19 more)
src/modal/: colorsel.c  confirm.c  enum.c  float.c  integer.c  normal.c
src/old/: scroller.c
